[package]
name = "js-bindgen-shared"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[package.metadata.dev]
require-feature = true

[lib]
bench = false
doctest = false
test = false

[dependencies]
anyhow = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
tokio = { workspace = true, features = [
	"io-util",
	"macros",
	"net",
	"process",
	"rt-multi-thread",
	"sync",
	"time",
], optional = true }
url = { workspace = true, optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["signal"], optional = true }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, features = [
	"Win32_System_Console",
	"Win32_System_Threading",
], optional = true }

[features]
memmap = ["dep:memmap2"]
web-driver = [
	"dep:anyhow",
	"dep:futures-util",
	"dep:nix",
	"dep:strum",
	"dep:tokio",
	"dep:url",
	"dep:windows-sys",
]

[lints]
workspace = true
